--- a/front/app/src/main/res/values/strings.xml
+++ b/front/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string-array name="programming_languages">
+        <item></item>
+    </string-array>
+    
 </resources>
